fix HW16